--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -2,3 +2,8 @@
     box-sizing: border-box;
    /* box-sizing est appliqué à tous les éléments */
    }
+
+body
+{
+    font-family: 'Raleway', sans-serif;
+}
