--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -14,6 +14,22 @@ body
     font-family: 'Raleway', sans-serif;
     color: black;
 }
+  p
+  {
+    font-weight: 400;
+    font-size: 15px;
+  }
+  
+  #container
+  {
+    max-width: 1440px;
+    margin: 0 auto;
+
+  }
+
+
+
+
 
 /*Header*/
 
@@ -23,19 +39,17 @@ header
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    font-size: 20px;
-    font-weight: 500;
-    width: 92%;
-    margin: auto;
+    font-size: 14px;
+    font-weight: 500;  
 }
 
 
 #booki /*Positionnement et dimensions du logo Booki*/
 {
-    width: 120px;
-    height: 60px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    width: 100px;
+    height: 50px;
+    margin-top: 40px;
+    margin-left: 60px;
 }
 
 nav/*Positionnement du nav avec la mise en place du hover*/
@@ -53,21 +67,73 @@ nav/*Positionnement du nav avec la mise en place du hover*/
     text-decoration: none;
     justify-content: center    ;
     display: flex;
-    padding-top: 105px;
-    width: 325px;
+    padding-top: 50px;
+    width: 160px;
     text-align: center;
+    border-top:2px solid transparent ;
  }
 
  nav a:hover
  {
     color:#0065FC;
-    border-top: solid 4px #0065FC;
+    border-top: solid 2px #0065FC;
  }
 
  /*Main*/
-
- main
+main
+{
+  margin:45px ;
+}
+ h1
  {
-    width: 92%;
-    margin: auto;
+  font-size: 20px;
+  font-weight: 700;
+ }
+
+
+ #bar
+ {
+  display: inline-flex;
+  flex-direction: row;
+  margin-top: 20px;
+  border: #F2F2F2 solid 2px;
+  border-radius: 12px;
+  height: 53px;
+  overflow: hidden;
+ }
+
+ .l-dot
+ {
+  width: 55px;
+  height: 55px;
+  background-color: #F2F2F2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 5px;
+ }
+
+ #location
+ {
+  font-weight: 700;
+  font-size: 16px;
+  border: #F2F2F2;
+  padding-left: 20px;
+  width: 225px;
+ }
+
+ .button
+ {
+  font-weight: 700;
+  font-size: 16px;
+  border: #0065FC;
+  color: white;
+  background-color: #0065FC;
+  width: 135px;
+
+ }
+
+ .ma_glass
+ {
+display: none;
  }
