--- a/CSS/small.css
+++ b/CSS/small.css
@@ -100,11 +100,13 @@ main
   display: flex;
   flex-direction: row;
   margin-top: 35px;
-  border: #F2F2F2 solid 2px;
-  border-radius: 12px;
-  width: 100%;
+  border: #F2F2F2 solid 1px;
+  border-radius: 16px;
+  width: 334px;
   height: 53px;
   overflow: hidden;
+  
+ 
  }
 
  .l-dot
@@ -137,8 +139,119 @@ display: none;
   display: block;
   border: #0065FC;
   background-color: #0065FC;
-  border-radius: 12px;
-  width: 50px;
-  height: 50px;
+  border-radius: 16px;
+  width: 52px;
+  height: 52px;
+  color: white;
+  position: absolute ;
+  left: 326px;
+  align-self: center;
+  }
 
+/*Partie filtres*/
+#filters
+{
+ 
+ display: flex;
+ flex-direction: column;
+ margin-top: 30px;
+ max-width: 100%;
+}
+
+#fbars
+{
+ display: flex;
+ flex-direction: row;
+}
+
+.title
+{
+ font-size:16px ;
+ font-weight: 700;
+ margin-right: 30px;
+}
+
+.f_choice
+{
+ display: flex;
+ position: relative;
+ flex-direction: row;
+ font-size:16px ;
+ font-weight: 700;
+ text-transform: capitalize;
+ margin-right: 25px;
+ border:#F2F2F2 2px solid;
+ border-radius: 30px;
+ height: 48px;
+ align-items: center;
+ padding-right: 20px;
  }
+
+.icon
+{
+ margin-right: 15px;
+ padding: 16px;
+ border-radius: 50%;
+}
+
+
+/*Mise en place de checkboxs pour les filtres*/
+
+.filter
+{
+ position: absolute;
+ opacity: 0;
+ cursor: pointer;
+ height: 40px;
+ width: 90%;
+}
+
+ .f_choice:hover
+{
+ background: #0065FC;
+ color: white;
+}
+
+
+
+/*Agrandissement et mise en transparence de la checkbox tout en ajoutant un effet pour signifier que la case est cochée*/
+
+.filter:checked ~ .icon
+{
+ background-color:#0065FC  ;
+ color:white;
+}
+
+.filter:not(checked) ~ .icon
+{
+ background-color:#DEEBFF ;
+ color: #0065FC;
+}
+
+/*Icone et phrase d'info*/
+#info
+{
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ margin: 20px 0 40px 0px;
+}
+
+#cinfo
+{
+ display: inline-flex;
+ margin-right: 14px;
+ color: #0065FC;
+ background-color:white ;
+ border-radius: 50%;
+ border: 1px solid #F2F2F2 ;
+ width: 23px;
+ height:23px;
+}
+
+#info .fa-solid
+{
+ margin: auto;
+ font-size: 13px;
+
+}
