--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -20,7 +20,7 @@ body
     font-size: 15px;
   }
   
-  #container
+  #c_page
   {
     max-width: 1440px;
     margin: 0 auto;
@@ -90,8 +90,9 @@ main
   font-weight: 700;
  }
 
+/*Barre de recherche */
 
- #bar
+#searchbar
  {
   display: inline-flex;
   flex-direction: row;
@@ -102,7 +103,7 @@ main
   overflow: hidden;
  }
 
- .l-dot
+#l-dot
  {
   width: 55px;
   height: 55px;
@@ -122,7 +123,7 @@ main
   width: 225px;
  }
 
- .button
+ #button
  {
   font-weight: 700;
   font-size: 16px;
@@ -132,14 +133,14 @@ main
   width: 135px;
   }
 
- .ma_glass
+ #ma_glass
  {
 display: none;
  }
 
 
  /*Partie filtres*/
- #filters
+ #c_filters
  {
   
   display: flex;
@@ -147,10 +148,11 @@ display: none;
   margin-top: 30px;
   }
 
- #fbars
+ #c_bars
  {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
  }
 
  .title
@@ -220,7 +222,7 @@ display: none;
 
  
  /*icone et phrase d'info*/
-#info
+#c_info
 {
  display: flex;
  flex-direction: row;
@@ -228,7 +230,7 @@ display: none;
  margin: 20px 0 40px 0px;
 }
 
-#cinfo
+#info
 {
  display: inline-flex;
  margin-right: 14px;
@@ -240,7 +242,7 @@ display: none;
  height:23px;
 }
 
-#info .fa-solid
+#c_info .fa-solid
 {
  margin: auto;
  font-size: 13px;
