--- a/CSS/medium.css
+++ b/CSS/medium.css
@@ -1,250 +1,17 @@
-.box {
-  box-sizing: border-box; /* Opera/IE 8+ */
-  /* box-sizing est appliqué seulement à cette classe */
-}
-
-* {
-  box-sizing: border-box;
-  /* box-sizing est appliqué à tous les éléments */
-}
-
-/*Mise en forme */
-body
-{
-  font-family: 'Raleway', sans-serif;
-  color: black;
-}
-p
-{
-  font-weight: 400;
-  font-size: 15px;
-}
-
-#blocpage
+#c_page
 {
   width: 100%;
   margin: 0 auto;
 
 }
 
-
-
-
-
-/*Header*/
-
-header 
-{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  font-size: 14px;
-  font-weight: 500;  
-}
-
-
-#booki /*Positionnement et dimensions du logo Booki*/
-{
-  width: 100px;
-  height: 50px;
-  margin-top: 40px;
-  margin-left: 60px;
-}
-
-nav/*Positionnement du nav avec la mise en place du hover*/
-{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-
-
-nav a
-{
-  color:black;
-  text-decoration: none;
-  justify-content: center    ;
-  display: flex;
-  padding-top: 50px;
-  width: 160px;
-  text-align: center;
-  border-top:2px solid transparent ;
-}
-
-nav a:hover
-{
-  color:#0065FC;
-  border-top: solid 2px #0065FC;
-}
-
-
-
 /*Main*/
-main
-{
-  margin:45px ;
-}
- h1
- {
-  font-size: 20px;
-  font-weight: 700;
- }
-
-
- #bar
- {
-  display: inline-flex;
-  flex-direction: row;
-  margin-top: 20px;
-  border: #F2F2F2 solid 1px;
-  border-radius: 12px;
-  height: 53px;
-  overflow: hidden;
- }
-
- .l-dot
- {
-  width: 55px;
-  height: 55px;
-  background-color: #F2F2F2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 5px
- }
-
- #location
- {
-  font-weight: 700;
-  font-size: 16px;
-  border: #F2F2F2;
-  padding-left: 20px;
-  width: 232px;
- }
-
- .button
- {
-  font-weight: 700;
-  font-size: 16px;
-  border: #0065FC;
-  color: white;
-  background-color: #0065FC;
-  width: 135px;
-
- }
-
- .ma_glass
- {
-display: none;
- }
 
 /*Partie filtres*/
-#filters
+#c_filters
 {
- 
  display: flex;
  flex-direction: column;
- margin-top: 30px;
-}
-
-#fbars
-{
- display: flex;
- flex-direction: row;
- flex-wrap: wrap;
-}
-
-.title
-{
- font-size:16px ;
- font-weight: 700;
- margin-right: 30px;
-}
-
-.f_choice
-{
- display: flex;
- position: relative;
- flex-direction: row;
- font-size:16px ;
- font-weight: 700;
- text-transform: capitalize;
- margin-right: 25px;
- margin-bottom: 15px;
- border:#F2F2F2 2px solid;
- border-radius: 30px;
- height: 48px;
- align-items: center;
- padding-right: 20px;
- }
-
-.icon
-{
- margin-right: 15px;
- padding: 15px;
- border-radius: 50%;
-}
-
-
-/*Mise en place de checkboxs pour les filtres*/
-
-.filter
-{
- position: absolute;
- opacity: 0;
- cursor: pointer;
- height: 40px;
- width: 90%;
-}
-
- .f_choice:hover
-{
- background: #0065FC;
- color: white;
-}
-
-
-
-/*Agrandissement et mise en transparence de la checkbox tout en ajoutant un effet pour signifier que la case est cochée*/
-
-.filter:checked ~ .icon
-{
- background-color:#0065FC  ;
- color:white;
-}
-
-.filter:not(checked) ~ .icon
-{
- background-color:#DEEBFF ;
- color: #0065FC;
-}
-
-/*icone et phrase d'info*/
-#info
-{
- display: flex;
- flex-direction: row;
- align-items: center;
- margin: 20px 0 40px 0px;
-}
-
-#cinfo
-{
- display: inline-flex;
- margin-right: 14px;
- color: #0065FC;
- background-color:white ;
- border-radius: 50%;
- border: 1px solid #F2F2F2 ;
- width: 23px;
- height:23px;
-}
-
-#info .fa-solid
-{
- margin: auto;
- font-size: 13px;
 
 }
+
