--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -20,7 +20,7 @@ body
     font-size: 15px;
   }
   
-  #container
+  #c_page
   {
     max-width: 1440px;
     margin: 0 auto;
@@ -91,7 +91,7 @@ main
  }
 
 
- #bar
+ #searchbar
  {
   display: inline-flex;
   flex-direction: row;
@@ -102,7 +102,7 @@ main
   overflow: hidden;
  }
 
- .l-dot
+ #l-dot
  {
   width: 55px;
   height: 55px;
@@ -122,7 +122,7 @@ main
   width: 225px;
  }
 
- .button
+ #button
  {
   font-weight: 700;
   font-size: 16px;
@@ -132,14 +132,14 @@ main
   width: 135px;
   }
 
- .ma_glass
+ #ma_glass
  {
 display: none;
  }
 
 
  /*Partie filtres*/
- #filters
+ #C_filters
  {
   
   display: flex;
@@ -147,13 +147,13 @@ display: none;
   margin-top: 30px;
   }
 
- #fbars
+ #f_bars
  {
   display: flex;
   flex-direction: row;
  }
 
- #filters p
+ #C_filters p
  {
   font-size:16px ;
   font-weight: 700;
@@ -174,9 +174,17 @@ display: none;
   height: 48px;
   align-items: center;
   padding-right: 20px;
+  position: relative;
  }
 
-.icon
+ .f_link
+{
+  height: 100%;
+  text-align: center;
+  padding-top: 12px;
+}
+
+.f_icon
 {
   margin-right: 15px;
   padding: 16px;
@@ -184,43 +192,31 @@ display: none;
   background-color: #deebff ;
 }
 
-.icon .fa-solid
+.f_icon .fa-solid
 {
   color: #0065FC;
 }
-
-
 
 .filter:hover
 {
   background-color: #0065FC;
 }
 
-.flink:not(:hover)
+.f_link:not(:hover)
 {
   text-decoration: none;
   color: black;
 }
 
-.filter a
-{
-  
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  padding-top: 12px;
-}
-
-.flink:hover
+.f_link:hover
 {
   color: white;
   text-decoration: none;
 }
 
-
  
  /*icone et phrase d'info*/
-#info
+#c_info
 {
  display: flex;
  flex-direction: row;
@@ -228,7 +224,7 @@ display: none;
  margin: 20px 0 40px 0px;
 }
 
-#cinfo
+#info
 {
  display: inline-flex;
  margin-right: 14px;
