--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -85,6 +85,7 @@ main
 }
  h1,h2
  {
+  margin: 0;
   font-size: 20px;
   font-weight: 700;
  }
@@ -170,11 +171,12 @@ display: none;
   font-weight: 700;
   margin-right: 25px;
   margin-bottom:15px ;
-  border:#F2F2F2 2px solid;
+  border:#F2F2F2 3px solid;
   border-radius: 30px;
   height: 48px;
   align-items: center;
   padding-right: 20px;
+  border-left: none;
   }
 
 .icon
@@ -225,7 +227,7 @@ display: none;
  display: flex;
  flex-direction: row;
  align-items: center;
- margin: 20px 0 40px 0px;
+ margin: 10px 0 30px 0px;
 }
 
 #info
@@ -251,7 +253,7 @@ display: none;
 
 /*Article sur les hébergements*/
 
-/*Section Hébergements à Marseille */
+
 
 
 #Hébergements
@@ -262,66 +264,169 @@ display: none;
   
   }
 
-#c_hebergements
+
+  /*Section Hébergements à Marseille */
+
+.hotels
 {
   display: flex;
-  flex-direction: column;
   flex-basis: 65%;
   background-color: #F2F2F2;
   border-radius: 20px;
-  padding: 45px 40px 30px 40px;
+  justify-content: space-around;
+  align-items: center;
+  height: 625px;
+  
 }
 
-#c_hebergements .box-row
+.cont_card
+{
+  width: 90%;
+  height: 86%;
+  display: flex;
+  flex-direction: column;
+  background-color: inherit;
+  justify-content: space-between;
+  margin-top: 0;
+}  
+
+.hotels .box-row
 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 30px;
-  margin-top: 20px;
+
 }
 
-.small_box
+.s_card
 {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  height: 210px ;
+  height: 190px ;
   flex-basis: 30%;
   background-color: white;
   justify-content: space-between;
+  border: 1px solid #F2F2F2;
+  position: relative;
   padding: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
 
-.c_sbpic
+.c_scpic
 {
-  display: block;
-  height: 60%;
-  width: 100%;
-  background-color: blue;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   overflow: hidden;
-
+  display: flex;
+  flex-direction: column;
 }
 
-.c_sbpic .photo
+.s_card .description
+{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 37%;
+  padding-left: 5%;
+}
+
+.c_scpic .photo
 {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  height: 113px;
+}
+
+.nameandprice
+{
+ line-height: 20px;
+}
+
+.name
+{
+  margin: 0;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 16px;
+}
+
+.price
+{
+  margin: 0;
+
+}
+
+/*Notation de la catégorie hébergement*/
+
+.boxh1 .fa-solid:nth-child(-n+4)
+{
+  color: #0065FC;
+}
+.boxh1 .fa-solid:nth-child(5)
+{
+  color: #F2F2F2;
+}
+
+.boxh2 .fa-solid:nth-child(-n+5)
+{
+  color: #0065FC;
+}
+
+.boxh3 .fa-solid:nth-child(-n+4)
+{
+  color: #0065FC;
+}
+.boxh3 .fa-solid:nth-child(5)
+{
+  color: #F2F2F2;
+}
+
+.boxh4 .fa-solid:nth-child(-n+3)
+{
+  color: #0065FC;
+}
+.boxh4 .fa-solid:nth-child(4),.boxh4 .fa-solid:nth-child(5)
+{
+  color: #F2F2F2;
+}
+
+.boxh5 .fa-solid:nth-child(-n+4)
+{
+  color: #0065FC;
+}
+.boxh5 .fa-solid:nth-child(5)
+{
+  color: #F2F2F2;
+}
+
+.boxh6 .fa-solid:nth-child(-n+5)
+{
+  color: #0065FC;
 }
 
 
+
+/*Mise en place des liens*/
 
 #more
 {
-  margin-top: 10px;
   color: black;
   text-decoration: none;
   font-size:16px ;
   font-weight: 700;
 }
+
+.c_link
+{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 98%;
+  height: 100%;
+}
+
+
+
 /*Aside populaire*/
 
 aside
@@ -331,7 +436,20 @@ aside
   flex-basis: 30%;
   background-color: #F2F2F2;
   border-radius: 20px;
-  padding: 45px 40px 30px 40px;
+  justify-content: space-around;
+  align-items: center;
+  height: 625px;
+}
+
+.c_aside
+{
+ width: 80%;
+ height: 90%;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ position: relative;
+ 
 }
 
 aside .title
@@ -341,6 +459,137 @@ aside .title
   justify-content: space-between;
   align-items: center;
 }
+
+.title .fa-solid
+{
+  position: absolute;
+  right: 0px;
+
+}
+
+.c_aside .box-row
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-basis: 87%;
+}
+
+.m_card
+{
+  display: flex;
+  border-radius: 20px;
+  height: 145px ;
+  width: 100%;
+  background-color: white;
+  border: 1px solid #F2F2F2;
+  position: relative;
+  padding: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+
+  .c_mcpic
+  {
+  display: inline-flex;
+  flex-direction: row;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  overflow: hidden;
+
+  }
+  
+  .c_mcpic .photo
+  {
+    object-fit: cover;
+    width: 126px;
+  }
+
+  .m_card .description
+{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 5%;
+}
+
+
+
+
+
+  /*Notation du top populaire */
+.boxh7 .fa-solid:nth-child(-n+5)
+  {
+    color: #0065FC;
+  }
+
+
+.boxh8 .fa-solid:nth-child(-n+4)
+  {
+  color: #0065FC;
+  }
+.boxh8 .fa-solid:nth-child(5)
+{
+  color: #F2F2F2;
+}
+
+.boxh9 .fa-solid:nth-child(-n+4)
+{
+  color: #0065FC;
+}
+.boxh9 .fa-solid:nth-child(5)
+{
+  color: #F2F2F2;
+}
+
+
+
+/*Article Activités*/
+
+#Activités
+{
+  display: flex;
+  flex-direction: column;
+}
+
+.c_activities
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin:0 auto ;
+  width: 100%;
+}
+
+.c_columnbox
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.box-column
+{
+ display: flex;
+  justify-content: space-between;
+  flex-basis: 22%;
+  height: 80%;
+  background-color: red;
+}
+
+.x1
+{
+ 
+ 
+}
+
+.l .c_apic
+{
+  background-color: blue;
+  height: 445px;
+  
+}
+
+
 
 
 
