--- a/CSS/medium.css
+++ b/CSS/medium.css
@@ -1,8 +1,10 @@
-#c_page
+/*Projet Booki
+  Ecran entre 768 et 992 px de largeur*/
+
+
+#body-c
 {
   width: 100%;
-  margin: 0 auto;
-
 }
 
 /*Main*/
@@ -11,17 +13,15 @@ main
   margin: 0;
 }
 
-#A_search
+#research
 {
-  margin:45px 45px 0 45px ;
+  margin:45px 5% 0 5% ;
 }
 
 /*Partie filtres*/
-#c_filters
+#c-filters
 {
- display: flex;
  flex-direction: column;
-
 }
 
 
@@ -45,12 +45,6 @@ main
   flex-basis: 48%;
   
 }
-
-.nameandprice
-{
-  line-height: 19px;
-}
-
 
 /*changements sur la partie Aside*/
 
