--- a/CSS/small.css
+++ b/CSS/small.css
@@ -2,36 +2,25 @@
 
 header 
 {
-  display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  font-size: 14px;
-  font-weight: 500;  
 }
 
 #booki /*Positionnement et dimensions du logo Booki*/
 {
-    width: 105px;
-    height: 50px;
     margin-top: 30px;
     margin-bottom: 45px;
+    margin-right: 20px;
 
 }
 
 nav/*Positionnement du nav avec la mise en place du hover*/
 {
-  display: flex;
-  flex-direction: row;
   width: 100%;
 }
 
-
-
 nav a
 {
-  color:black;
-  text-decoration: none;
   justify-content: center    ;
   display: flex;
   width: 50%;
@@ -44,7 +33,6 @@ nav a
 
 nav a:hover
 {
-  color:#0065FC;
   border-bottom: solid 4px #0065FC;
   border-top: none;
 }
@@ -53,24 +41,23 @@ nav a:hover
 
 /*Barre de recherche */
 
+#research
+{
+  padding-left: 0;
+}
+
 #searchbar
  {
   display: flex;
-  flex-direction: row;
   margin-top: 35px;
   border: #F2F2F2 solid 1px;
   border-radius: 16px;
   width: 334px;
-  height: 53px;
-  overflow: hidden;
+  margin-left: 0;
  }
 
  #location
  {
-  font-weight: 700;
-  font-size: 16px;
-  border: #F2F2F2;
-  padding-left: 20px;
   width: auto;
  }
 
@@ -94,6 +81,13 @@ display: none;
   }
 
 
+  /*filtres*/
+#c-fiters
+{
+  margin-left: 0;
+}
+
+
 /*changements hébergements*/
 #Hébergements
 {
@@ -109,7 +103,7 @@ display: none;
   background-color: white;
 }
 
-.cont_card
+.hotels-c
 {
   height:95% ;
   width: 90%;
@@ -118,7 +112,7 @@ display: none;
 
 }
 
-.hotels .box-row
+.hotels .cards-row
 {
   flex-direction: column;
   flex-basis: 46%;
@@ -126,12 +120,12 @@ display: none;
 }
 
 
-.s_card
+.xs_card
 {
  flex-basis: 32%;
 }
 
-.c_scpic .photo
+.xs_photo .photo
 {
   height: 125px;
 }
@@ -146,20 +140,20 @@ flex-basis: 640px;
 border-radius: 0;
 }
 
-.c_aside
+.popular-c
 {
   width: 90%;
   height: 85%;
   justify-content: space-between;
 }
 
-.c_aside .box-row
+.popular-c .cards-row
 {
   flex-basis: 89%;
   
 }
 
-.m_card
+.s_card
 {
   flex-basis: 32%;
   
