--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -345,8 +345,15 @@ display: none;
   padding-left: 5%;
 }
 
+.inline_bold
+{
+  font-weight: bold;
+}
+
 .photo
-{object-fit: cover;}
+{
+  object-fit: cover;
+}
 
 .xs_card
 {
@@ -391,7 +398,7 @@ display: none;
 
 /*Notation de la catégorie hébergement*/
 
-.hotel_card1 .fa-solid:nth-child(-n+4)
+.hotel_card1 .fa-solid:nth-child(-n+4)                              
 {
   color: #0065FC;
 }
@@ -514,37 +521,31 @@ aside .title
 
 .s_photo
  {
-  flex-direction: row;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
+  flex-direction: row;
 }
   
   .s_photo .photo
   {
-    object-fit: cover;
+  
     width: 126px;
   }
 
-  .s_card .description
-{
-  display:flex;
-  flex-direction: column;
-  justify-content: space-around;
-  padding-left: 5%;
-}
+
 
 
 
 
 
   /*Notation du top populaire */
-.hotel_card7 .fa-solid:nth-child(-n+5)
+.hotel_card7 .fa-solid:nth-child(-n+5)                         /*card 1 du top 3*/
   {
     color: #0065FC;
   }
 
 
-.hotel_card8 .fa-solid:nth-child(-n+4)
+.hotel_card8 .fa-solid:nth-child(-n+4)                         /*card 2 du top 3*/  
   {
   color: #0065FC;
   }
@@ -553,7 +554,7 @@ aside .title
   color: #F2F2F2;
 }
 
-.hotel_card9 .fa-solid:nth-child(-n+4)
+.hotel_card9 .fa-solid:nth-child(-n+4)                          /*card 3 du top 3*/
 {
   color: #0065FC;
 }
@@ -565,6 +566,146 @@ aside .title
 
 
 /*Article Activités*/
+
+.activities-c
+{
+  padding-top: 65px;
+  padding-bottom: 20px;
+}
+
+#Activités h2
+{
+  padding-left: 3%;
+  margin-bottom: 25px;
+}
+
+.c-cards-column
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.cards-section
+{
+  display: flex;
+  flex-direction: row;
+  width: 48%;
+  justify-content: space-between;
+}
+
+.cards-column                                    /*Mise en place des colonnes */
+{
+  display: flex;
+  justify-content: space-between;
+  height: 450px;
+  width: 46%;
+}
+
+.cc1, .cc2
+{
+  flex-direction: column;
+}
+
+.cc2r
+{
+  flex-direction: column-reverse;
+} 
+
+                                                   /*Mise en place des cartes activités*/
+#Activités .card
+{
+  flex-direction: column;
+}
+
+.xl_card
+{
+  flex-basis: 100%;
+}
+
+.l_card
+{
+  flex-basis:53% ;
+}
+
+.m_card
+{
+  flex-basis:37% ;
+}
+
+#Activités .c-photo
+{
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  flex-direction: column;
+}
+
+
+.xl_photo .photo
+{
+  height: 390px;
+}
+
+.l_photo .photo
+{
+  height: 180px;
+}
+
+.m_photo .photo
+{
+  height: 110px;
+}
+
+#Activités .description
+{
+ height: 55px;
+}
+
+
+
+/*Footer*/
+
+footer
+{
+  background-color: #F2F2F2;
+  height: 220px;
+  display: flex;
+  align-items: center;
+}
+
+.footer-c
+{
+  display:flex;
+  width: 71%;
+  height: 55%;
+  margin-left: 3% ;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.c-footer_links
+{
+  display: flex;
+  flex-direction: column;
+}
+
+footer ul
+{
+  padding-left: 0;
+  list-style-type: none;
+  font-size: 16px;
+  height: 80%;
+  margin-top: 0;
+  line-height: 28px;
+}
+
+h3
+{
+  font-weight: 700;
+  font-size: 18px;
+}
+
+
 
 
 
