--- a/CSS/medium.css
+++ b/CSS/medium.css
@@ -28,7 +28,7 @@ main
 
 /*Changements sur la partie hébergements*/
 
-#Hébergements
+#lodging
 {
   flex-direction: column-reverse;
   height: 1300px;
